*SVN*

* Fix that FormTagHelper#submit_tag using :disable_with should trigger the onsubmit handler of its form if available [DHH]

* Fix #render_file so that TemplateError is called with the correct params and you don't get the WSOD.  [Rick]

* Fix issue with deprecation messing up #template_root= usage.  Add #prepend_view_path and #append_view_path to allow modification of a copy of the
superclass' view_paths.  [Rick]

* Allow Controllers to have multiple view_paths instead of a single template_root.  Closes #2754 [John Long]

* Add much-needed html-scanner tests.  Fixed CDATA parsing bug. [Rick]

* improve error message for Routing for named routes.  Closes #7346 [Rob Sanheim]

* Added enhanced docs to routing assertions.  Closes #7359 [Rob Sanheim]

* fix form_for example in ActionController::Resources documentation.  Closes #7362 [gnarg]

* Make sure that the string returned by TextHelper#truncate is actually a string, not a char proxy -- that should only be used internally while working on a multibyte-safe way of truncating [DHH]

* Added FormBuilder#submit as a delegate for FormTagHelper#submit_tag [DHH]

* TestSession supports indifferent access so session['foo'] == session[:foo] in your tests.  #7372 [julik, jean.helou]

* Allow Routes to generate all urls for a set of options by specifying :generate_all => true. Allows caching to properly set or expire all paths for a resource. References #1739. [Nicholas Seckar]

* Change the query parser to map empty GET params to "" rather than nil. Closes #5694. [Nicholas Seckar]

* date_select and datetime_select take a :default option.  #7052 [nik.wakelin]
    date_select "post", "written_on", :default => 3.days.from_now
    date_select "credit_card", "bill_due", :default => { :day => 20 }

* select :multiple => true suffixes the attribute name with [] unless already suffixed.  #6977 [nik.kakelin, ben, julik]

* Improve routes documentation.  #7095 [zackchandler]
