@@ -53,6 +53,14 @@ class SendFileTest < Test::Unit::TestCase
     assert_nothing_raised { response.body.call(response, output) }
     assert_equal file_data, output.string
   end
+  
+  def test_file_url_based_filename
+    @controller.options = { :url_based_filename => true }
+    response = nil
+    assert_nothing_raised { response = process('file') }
+    assert_not_nil response
+    assert_equal "attachment", response.headers["Content-Disposition"]
+  end
 
   def test_data
     response = nil
